[project]
name = "Shape-of-War"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "James", email = "James.McIntyre.100@Gmail.com"},
]
dependencies = [
    "pygame==2.6.0",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "GPL3"}


[tool.pdm]
distribution = false
